--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@inco/solana-sdk": "^0.0.2",
+    "@solana/spl-token": "^0.4.14",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
+    "buffer": "^6.0.3",
     "lucide-react": "^0.468.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
+    "process": "^0.11.10",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
