--- a/programs/donatrade_program/Cargo.toml
+++ b/programs/donatrade_program/Cargo.toml
@@ -13,7 +13,13 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+anchor-spl = "0.31.1"
+inco-lightning = { version = "0.1.4", features = ["cpi"] }
+# Pin stable versions to avoid Edition 2024 conflicts in Solana toolchain
+blake3 = "=1.7.0"
+constant_time_eq = "=0.3.1"
