--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,7 +3,7 @@ anchor_version = "0.31.1"
 
 [features]
 resolution = true
-skip-lint = false
+skip-lint = true
 
 [programs.devnet]
 donatrade_program = "9MBsFdzmTYU93kDseX9mczoYPChfaoSMU3uS9tu5e4ax"
