--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
+    "@vercel/analytics": "^1.6.1",
     "buffer": "^6.0.3",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
